--- a/Mekashron.POC/Views/Authorization/Login.cshtml
+++ b/Mekashron.POC/Views/Authorization/Login.cshtml
@@ -1,39 +1,12 @@
 ﻿@{
-    Layout = null;
+    Layout = @"~/Views/Shared/_LoginLayout.cshtml";
 }
-
-
-<link href="https://getbootstrap.com/docs/5.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-<style>
-    .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-    }
-
-    @@media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-            font-size: 3.5rem;
-        }
-    }
-</style>
-
-<link href="https://getbootstrap.com/docs/5.1/examples/sign-in/signin.css" rel="stylesheet">
-
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-
-<script src="~/js/pages/login.js"></script>
-
 
 <main class="form-signin">
     <h1 class="h3 mb-3 fw-normal text-center">Please sign in</h1>
 
     <div class="form-floating">
-        <input type="text" class="form-control my-2" id="username" placeholder="Username">
+        <input type="email" class="form-control my-2" id="username" placeholder="Username">
         <label for="username">Username</label>
     </div>
     <div class="form-floating">
