--- a/Mekashron.POC/Views/Shared/_LoginLayout.cshtml
+++ b/Mekashron.POC/Views/Shared/_LoginLayout.cshtml
@@ -3,15 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Mekashron.POC</title>
-    
+    <title>Login - Mekashron.POC</title>
+
     <link href="~/lib/bootstrap/dist/css/bootstrap5.1.css" rel="stylesheet" />
-
     <link href="~/css/site.css" rel="stylesheet" />
-
     <link href="~/lib/toastr/toastr.css" rel="stylesheet" />
-
 </head>
+
 <body>
     <div class="container">
         @RenderBody()
