--- a/Mekashron.POC/wwwroot/css/site.css
+++ b/Mekashron.POC/wwwroot/css/site.css
@@ -118,8 +118,10 @@ body {
     user-select: none;
 }
 
-@@media (min-width: 768px) {
+@media (min-width: 768px) {
     .bd-placeholder-img-lg {
         font-size: 3.5rem;
     }
 }
+
+
